tests/ui/typech/pointer_deref_without_unsafe.lm
fn foo(ptr: *UInt64) {
    *ptr = 1_u64;
}
